--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "countries-spa-youtube-example",
   "version": "0.1.0",
+  "homepage": "https://Ivan19979.github.io/countries-spa-youtube-example",
   "private": true,
   "dependencies": {
     "@redux-devtools/extension": "^3.2.5",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
