--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
     "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
@@ -14,9 +15,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.5",
-    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
