--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
@@ -46,6 +46,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
+    "@types/styled-components": "^5.1.28",
+    "gh-pages": "^6.0.0",
+    "typescript": "^5.2.2"
   }
 }
